--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,16 +1,18 @@
 .footer {
-  border: 1px solid red;
-  padding-top: 164px;
+  padding: 8% 0 0 10%;
+  background: rgba(8, 8, 13, 1);
 
   .footer_section {
     display: flex;
-    justify-content: center;
-    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    text-align: left;
 
     .footer_left {
-      width: 494px;
-      flex-shrink: 0;
+      width: 100%;
+      max-width: 494px;
       text-align: left;
+
       h1 {
         color: #313169;
         font-size: 32px;
@@ -18,12 +20,11 @@
         font-weight: 700;
         margin-bottom: 30px;
       }
+
       p {
-        display: flex;
-        width: 461px;
-        flex-direction: column;
-        flex-shrink: 0;
-        color: #08080d;
+        width: 100%;
+        max-width: 461px;
+        color: #f9f9f9;
         font-size: 24px;
         font-family: Cabin;
         font-weight: 500;
@@ -32,17 +33,18 @@
     }
 
     .footer_right {
-      border-radius: 5px;
+      width: 100%;
+      max-width: 526px;
+      margin-right: 8rem;
+
       .my-form {
         /* Form container styles */
-        text-align: left;
+
         label {
           /* Label styles */
-          display: flex;
-          width: 448px;
-          flex-direction: column;
-          flex-shrink: 0;
-          color: #08080d;
+          width: 100%;
+          max-width: 448px;
+          color: #f9f9f9;
           font-size: 16px;
           font-family: Cabin;
           font-weight: 500;
@@ -52,10 +54,8 @@
         input[type="text"],
         input[type="email"] {
           /* Input and textarea styles */
-          width: 526px;
-          height: 50px;
-          flex-shrink: 0;
           width: 100%;
+          height: 50px;
           padding: 12px 20px;
           margin: 0 0 40px 0;
           display: inline-block;
@@ -70,7 +70,6 @@
           width: 100%;
           height: 100px;
           max-width: 526px;
-          flex-shrink: 0;
           padding: 12px 20px;
           margin: 0 0 40px 0;
           box-sizing: border-box;
@@ -86,15 +85,88 @@
           margin: 8px 0;
           border: none;
           height: 55px;
-          flex-shrink: 0;
           border: 1px solid #313169;
           background: #313169;
           cursor: pointer;
         }
+      }
+    }
+  }
 
-        .btn_submit :hover {
-          background-color: #45a049;
-        }
+  .footer_footer {
+    text-align: left;
+
+    h2 {
+      color: #f9f9f9;
+      font-size: 24px;
+      font-family: Aleo;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 150%;
+      margin-bottom: 24px;
+    }
+
+    .footer_social {
+      display: flex;
+      flex-direction: row;
+      gap: 1em;
+      margin-bottom: 24px;
+
+      img {
+        width: 36.034px;
+        height: 36.034px;
+      }
+    }
+
+    p {
+      color: #f9f9f9;
+      font-size: 16px;
+      font-family: Cabin;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 150%;
+    }
+  }
+
+  /* Responsive Breakpoints */
+
+  @media (max-width: 768px) {
+    .footer {
+      padding: 12% 0 0 8%;
+    }
+
+    .footer_section {
+      flex-direction: column;
+
+      .footer_left,
+      .footer_right {
+        width: 100%;
+        max-width: none;
+      }
+
+      .footer_left {
+        margin-bottom: 2rem;
+      }
+
+      .footer_right {
+        margin-top: 2rem;
+      }
+    }
+
+    .footer_footer {
+      text-align: center;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .footer {
+      padding: 8% 0 0 2%;
+    }
+
+    .footer_section {
+      .footer_left,
+      .footer_right {
+        padding: 0 1rem;
       }
     }
   }
