finish the media query and scss style

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,8 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;}
+
 .App {
-  max-width: 1440px;
   text-align: center;
-  background: #E7E7E7;
+  background: #F9F9F9;
+  /* padding: 0 8.5rem; */
 }
 
 .App-logo {
@@ -20,25 +17,13 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: white; */
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
