--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,32 +1,32 @@
 .bout {
-  height: 100vh;
-  border: 1px solid red;
   text-align: center;
-  padding: 1em 0 0 0 ;
-  overflow-y: auto;
-
+  margin: 0rem auto 0;
+  padding: 1em 2rem 1em 3rem;
 
   section {
     display: flex;
-    justify-content: space-around;
-    gap: 5em;
+    justify-content: space-between;
+    gap: 2em;
     text-align: left;
-    padding: 75px 3em 0em 7em;
+    padding: 2.6875rem 0em 0 0em;
+
 
     .about_left {
       position: relative;
+
       .image_deco {
-        height: 390px;
-        top: 20;
+        max-width: 26.25rem;
+        height: auto;
         margin-bottom: 2em;
+        top: 1.25rem;
       }
 
       .about_img {
         position: absolute;
-        left: 30px;
-        top: 1px;
-        height: 360px;
-        width: 360px;
+        left: 1.875rem; 
+        top: 0.0625rem; 
+        max-width: 22.5rem; 
+        height: 22.5rem; 
         margin-bottom: 2em;
       }
     }
@@ -36,22 +36,203 @@
         font-family: "Aleo";
         font-style: normal;
         font-weight: 700;
-        font-size: 32px;
-        line-height: 38px;
-        margin-bottom: 22px;
+        font-size: 2rem; 
+        line-height: 2.375rem; 
+        margin-bottom: 1.375rem; 
         color: #313169;
       }
 
       p {
         padding-left: 3.5em;
-        font-family: "Cabin";
+        font-family: Arial, Helvetica, sans-serif;
         font-style: normal;
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 29px;
-
+        font-weight: 400;
+        font-size: 1.2rem; 
+        line-height: 1.8125rem; 
         color: #08080d;
       }
+    }
+  }
+
+  @media (max-width: 1253px) {
+    section {
+      padding: 2.8125rem 2.25rem 0 0rem;
+      .about_left {
+        .image_deco {
+          max-width: 18.75rem; 
+          top: 0.625rem; 
+        
+        }
+
+        .about_img {
+          left: 1.25rem; 
+          top: 0.03125rem; 
+          max-width: 16.875rem; 
+          height: 16.875rem;
+        }
+      }
+
+      .about_right {
+        h1 {
+          font-size: 1.9375rem !important;
+          line-height: 2.8125rem; 
+          margin-bottom: 0.875rem; 
+        }
+
+        p {
+          padding-left: 2.75em;
+          font-size: 1rem; 
+          line-height: 1.8125rem; 
+        }
+      }
+    }
+  }
+
+  @media (max-width: 980px) {
+    section {
+      padding: 2.25rem 1.5rem 0 0;
+
+      .about_left {
+        .image_deco {
+          max-width: 15rem; 
+          top: 0.5rem; 
+        }
+
+        .about_img {
+          left: 1rem; 
+          top: 0.03125rem; 
+          max-width: 13.5rem; 
+          height: 13.5rem;
+        }
+      }
+
+      .about_right {
+        h1 {
+          font-size: 1.5rem !important; 
+          line-height: 2.375rem; 
+          margin-bottom: 0.625rem; 
+        }
+
+        p {
+          padding-left: 2.25rem;
+          font-size: 1rem !important; 
+          line-height: 1.625rem; 
+        }
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    section {
+      flex-direction: column-reverse;
+      gap: 1em;
+      align-items: center;
+      padding: 2.25rem 1rem 0 0;
+
+      .about_left {
+        width: 100%;
+
+        .image_deco {
+          display: none;
+        }
+
+        .about_img {
+          position: static;
+          width: 100%;
+          max-width: 100%;
+          object-fit: cover;
+          margin-bottom: 1.5rem;
+        }
+      }
+
+      .about_right {
+        h1 {
+          font-size: 1.3rem;
+          line-height: 1.875rem;
+          margin-bottom: 0.75rem;
+        }
+
+        p {
+          padding-left: 0;
+          font-size: 1rem !important;
+          line-height: 1.375rem;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 598px) {
+    .bout {
+      padding: 0 !important;
+      border: 1px solid rgb(0, 38, 255) !important;
+    }
+    .about_right {
+      text-align: left;
+      h1 {
+        font-size: 1.3rem;
+      }
+    }
+  }
+
+  @media (max-width: 576px) {
+    .bout {
+      border: 2px solid rgb(0, 38, 255);
+    }
+    section {
+    
+
+      .about_right {
+        text-align: left;
+        h1 {
+          font-size: 1.375rem !important;
+          line-height: 1.6875rem;
+          text-align: center;
+        }
+
+        p {
+          font-size: 1rem !important;
+          line-height: 1.25rem;
+          font-family: Arial, Helvetica, sans-serif;
+        }
+      }
+    }
+  }
+}
+
+.btn-connect-me {
+  background: #313169;
+  border: 1px solid #313169;
+  color: #f9f9f9;
+  padding: 1.125rem 2rem;
+  font-family: "Cabin";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1rem; 
+  line-height: 1.1875rem; 
+
+  &:hover {
+    cursor: pointer !important;
+    background: #4b4b8a;
+  }
+
+  @media (max-width: 768px) {
+    .bout {
+    font-size: 0.9375rem; 
+    line-height: 1.125rem; 
+    }
+  }
+
+  @media (max-width: 576px) {
+    font-size: 1rem !important; 
+    line-height: 0.9375rem; 
+    padding: 0.875rem 1.25rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .bout {
+    section {
+      margin: 0rem -1.25rem 1rem -1rem !important;
     }
   }
 }
