--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,27 +1,26 @@
 .hero-section {
   text-align: center;
-  border: 1px solid red;
-  position: relative;
-  height: 100vh;
+  margin-top: 3rem;
+  padding: 1em 5rem 0 4.5rem;
+
 
   .hero {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     margin: 6em 0 0;
-    padding: 5em 9em 0 9em;
-    
+
     .hero-left {
       text-align: left;
       width: 100%;
-      max-width: 534px;
+      max-width: 33.375rem;
 
       h1 {
         font-family: "Aleo";
         font-style: normal;
         font-weight: 600;
-        font-size: 65px;
-        line-height: 84px;
+        font-size: 4.0625rem;
+        line-height: 5.25rem;
       }
 
       span {
@@ -29,21 +28,21 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
-        text-fill-color: transparent;
+        // text-fill-color: transparent;
       }
 
       p {
         font-family: "Cabin";
         font-style: normal;
         font-weight: 500;
-        font-size: 24px;
-        line-height: 29px;
+        font-size: 1.5rem;
+        line-height: 1.8125rem;
         color: #08080d;
       }
 
       .social-links {
         display: flex;
-        margin: 60px 0 70px;
+        margin: 3.75rem 0 4.375rem;
         align-items: flex-start;
         text-align: left;
 
@@ -51,15 +50,15 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          width: 30px;
-          height: 30px;
+          width: 1.875rem;
+          height: 1.875rem;
           border-radius: 50%;
-          margin-right: 1em;
+          margin-right: 1rem;
           background-color: #313169;
         }
 
         .circle-icon svg {
-          font-size: 24px;
+          font-size: 1.5rem;
           color: #fff;
         }
       }
@@ -68,12 +67,12 @@
         background: #313169;
         border: 1px solid #313169;
         color: #f9f9f9;
-        padding: 18px 32px;
+        padding: 1.125rem 2rem;
         font-family: "Cabin";
         font-style: normal;
         font-weight: 700;
-        font-size: 16px;
-        line-height: 19px;
+        font-size: 1rem;
+        line-height: 1.1875rem;
 
         &:hover {
           cursor: pointer !important;
@@ -85,9 +84,9 @@
     .hero-right {
       .image-container {
         position: relative;
-        width: 400px;
+        width: 25rem;
         z-index: 0;
-        height: 400px;
+        height: 25rem;
         border-radius: 50%;
         overflow: hidden;
         display: flex;
@@ -110,21 +109,306 @@
         width: 100%;
         transform: translateX(-50%);
         height: 100%;
-        border: 6px solid black;
+        border: 0.375rem solid black;
         border-top-color: transparent;
         border-left-color: transparent;
-        border-bottom: 150px;
+        border-bottom: 9.375rem;
         border-radius: 50%;
       }
     }
   }
+
   .anchor-link {
     text-align: center;
   }
+
   .w {
     width: 45px;
     height: 45px;
     font-size: 1em;
     color: #08080d;
+  }
+}
+
+@media (max-width: 1253px) {
+  .hero-left {
+    h1 {
+      font-weight: 600;
+      font-size: 4.0625rem !important;
+      line-height: 2.25rem !important;
+      margin-bottom: 0.8rem;
+    }
+
+    p {
+      font-size: 1.5rem !important;
+      line-height: 1.8125rem !important;
+      color: #08080d;
+    }
+
+    .social-links {
+      margin: 1rem 0 2.375rem !important;
+    }
+
+    .btn-connect-me {
+      padding: 1rem 1.5rem;
+      font-size: 1rem;
+    }
+  }
+  .hero-right {
+    .image-container {
+      width: 19rem !important;
+      z-index: 0;
+      height: 19rem !important;
+
+      .image-container img {
+        width: 100% !important;
+      }
+    }
+  }
+}
+
+@media (max-width: 1025px) {
+  .hero {
+    .hero-left {
+      max-width: 50% !important;
+
+      h1 {
+        font-size: 2.5rem !important;
+        margin-bottom: 0.8rem;
+      }
+
+      p {
+        font-size: 1.3rem !important;
+      }
+
+      .social-links {
+        margin: 1rem 0 1rem !important;
+      }
+
+      .circle-icon {
+        width: 1.2rem !important;
+        height: 1.2rem !important;
+      }
+
+      .circle-icon svg {
+        font-size: 1rem !important;
+        color: #fff;
+      }
+
+      .btn-connect-me {
+        padding: 0.8rem 1.5rem !important;
+        font-size: 0.8rem !important;
+      }
+    }
+
+    .hero-right {
+      .image-container {
+        width: 15rem !important;
+        height: 15rem !important;
+        z-index: 0;
+
+        .image-container img {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .hero {
+    margin-top: 3em;
+    padding: 3em 1em 0 1em;
+
+    .hero-left {
+      text-align: left;
+
+      h1 {
+        font-size: 2.3rem !important;
+      }
+
+      p {
+        font-size: 1rem !important;
+        width: 20rem;
+        line-height: 1.3rem !important;
+      }
+
+      .social-links {
+        margin-top: 1.5rem;
+      }
+
+      .btn-connect-me {
+        padding: 0.5rem 1.5rem !important;
+        font-size: 1rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 810px) {
+  .hero {
+    margin-top: 3em;
+    padding: 3em 1em 0 1em;
+
+    .hero-left {
+      text-align: left;
+
+      h1 {
+        font-size: 2rem !important;
+        margin-bottom: 0.8rem;
+      }
+
+      p {
+        width: 20rem;
+        font-size: 1.2rem !important;
+        line-height: 1.3rem !important;
+      }
+
+      .social-links {
+        margin-top: 1.5rem;
+      }
+
+      .btn-connect-me {
+        padding: 0.5rem 1rem !important;
+        font-size: 0.8rem;
+      }
+    }
+
+    .hero-right {
+      .image-container {
+        z-index: 0;
+        width: 10rem !important;
+        height: 10rem !important;
+
+        .image-container img {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .hero-section {
+    padding: 3rem 0 0;
+    .hero {
+      flex-direction: column;
+      margin-top: 5em;
+      padding: 0;
+
+      .hero-left {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: auto;
+        min-width: 100%;
+
+        .desc {
+          width: calc(100% - 2px);
+          text-align: center;
+          max-width: 38rem;
+
+          h1 {
+            font-size: 2.5rem;
+            line-height: 3.125rem;
+          }
+
+          p {
+            width: 100%;
+            font-size: 1.3rem !important;
+            line-height: 1.9rem !important;
+          }
+        }
+
+        .social-links {
+          margin-top: 1.5rem;
+        }
+
+        .btn-connect-me {
+          padding: 1rem 1.5rem;
+          font-size: 1rem;
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 598px) {
+  .hero {
+    margin: 0 !important;
+    padding: -2em 1.5em 0 1em !important;
+    flex-direction: column;
+    text-align: center !important;
+    justify-content: center;
+
+    .hero-left {
+      display: flex;
+      flex-direction: column;
+      justify-content: center !important;
+      align-items: center;
+      width: auto;
+      min-width: 90%;
+
+      .desc {
+        text-align: center !important;
+
+        h1 {
+          font-size: 2.25rem;
+          line-height: 2.75rem;
+        }
+
+        p {
+          width: 100%;
+          font-size: 0.8rem !important;
+          line-height: 1.275rem !important;
+          font-family: Arial, Helvetica, sans-serif;
+        }
+      }
+
+      .btn-connect-me {
+        display: none;
+      }
+
+      .social-links {
+        display: block;
+        gap: 1rem;
+        text-align: center;
+
+        .circle-icon {
+          gap: 1rem;
+          text-align: center !important;
+          margin-right: 0 !important;
+        }
+      }
+    }
+
+    .image-container {
+      position: relative;
+      width: 25rem;
+      z-index: 0;
+      height: 25rem;
+      border-radius: 50%;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .image-container img {
+      display: block;
+      width: 80%;
+      height: 80%;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+
+    .overlay {
+      display: none;
+    }
+  }
+
+  .anchor-link {
+    display: none;
   }
 }
