--- a/src/components/skill/skill.scss
+++ b/src/components/skill/skill.scss
@@ -1,37 +1,41 @@
 .skill_container {
-  padding: 75px 0;
-  overflow-y: auto;
-//   height: 100vh;
-  border: 1px solid red;
+  width: 100%;
+  margin: 3rem auto 0;
+  padding: 5em 3rem 1rem 3rem;
 
   .top_skill_section {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    margin-bottom: 1em;
-    
+    justify-content: space-between;
+    margin-bottom: 5.39875em;
+
     .left {
       width: 50%;
       text-align: left;
+      padding-right: 1rem;
 
       h1 {
         margin-bottom: 1em;
-        width: 79px;
-        height: 38px;
+        width: 4.9375rem;
+        height: 2.375rem;
         font-family: "Aleo";
         font-style: normal;
         font-weight: 700;
-        font-size: 32px;
-        line-height: 38px;
+        font-size: 1.25rem;
+        line-height: 2.375rem;
         color: #313169;
+        padding-left: 1rem;
       }
+
       p {
-        width: 660px;
-        font-family: "Cabin";
+        width: 41.25rem;
+        max-width: 100%;
+        font-family: Arial, Helvetica, sans-serif;
         font-style: normal;
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 29px;
+        font-weight: 400;
+        font-size: 1.2rem;
+        line-height: 1.8125rem;
+        padding-left: 1rem;
         color: #08080d;
       }
 
@@ -42,45 +46,376 @@
       }
     }
 
+    .stack_ratings {
+      display: flex;
+      justify-content: space-evenly;
+      margin-bottom: 3em;
+
+      .rating-box {
+        text-align: center;
+        width: auto;
+        max-width: 6rem;
+        height: 6rem;
+        .img {
+          position: relative;
+        }
+
+        img {
+          width: 100%;
+          max-width: 4.6875rem !important;
+          height: 4.6rem !important;
+        }
+
+        .react {
+          width: 100%;
+          max-width: 3rem !important;
+          height: 3rem !important;
+          margin-bottom: 0.9rem;
+          margin-right: -3.89rem;
+          margin-left: 0.9rem;
+        }
+
+        .firebase {
+          width: 100%;
+          max-width: 2.6rem !important;
+          height: 3rem !important;
+          margin-bottom: 0.7rem;
+          margin-right: -3.7rem;
+          margin-left: 0.7rem;
+        }
+
+        .polygon {
+          width: 100%;
+          max-width: 4.6875rem;
+          height: 4.6rem;
+        }
+
+        a {
+          text-decoration: none;
+          list-style: none;
+          color: #313169;
+          text-align: center;
+          font-family: "Courier New", Courier, monospace;
+          font-size: 1rem;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+        }
+      }
+    }
+
     .right {
       .pentagon_img {
-        width: 382.38px;
-        height: 360.62px;
-        left: 892.81px;
-        top: 141px;
+        width: 100%;
+        height: 25.8vw;
+        max-width: 31.9375rem;
+        max-height: 25.875rem;
+        transition: transform 0.5s ease-in-out;
       }
     }
   }
+}
 
-  .stack_ratings {
-    display: flex;
-    justify-content: space-around;
-     margin-bottom: 3em;
-    .rating-box {
-      .inner-circle {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        width: 100px;
-        height: 100px;
-        text-align: center;
-        border-radius: 50%;
-        background: #722552;
-        margin-bottom: 1em;
+@media (max-width: 1280px) {
+  .top_skill_section {
+    margin-bottom: 3.2rem;
+  }
 
-        .rating {
-          width: 80px;
-          height: 80px;
-          border-radius: 50%;
-          background: white;
-          position: absolute;
-          left: 50%;
-          top: 50%;
-          transform: translate(-50%, -50%);
-          z-index: 1;
-          text-align: center;
-          padding: 1.5em 0;
+  .left {
+    h1 {
+      width: 5rem;
+      height: 2.375rem;
+      font-size: 1.3rem !important;
+      line-height: 1.9rem;
+    }
+    p {
+      width: 34.375rem;
+      font-size: 1.2rem;
+      line-height: 1.45rem;
+      word-wrap: break-word !important;
+    }
+
+    .stack_ratings {
+      .rating-box {
+        width: auto;
+        max-width: 6rem;
+
+        .img {
+          position: relative;
+        }
+
+        img {
+          width: 100%;
+          max-width: 4.3rem !important;
+          height: 4.3rem !important;
+        }
+
+        .react {
+          width: 100%;
+          max-width: 3.6rem;
+          margin-bottom: 0.9rem;
+          margin-right: -4.1rem;
+          margin-left: 0.5rem;
+        }
+
+        .firebase {
+          width: 100%;
+          max-width: 2.6rem;
+          margin-bottom: 0.7rem;
+          margin-right: -3.6rem;
+          margin-left: 0.7rem;
+        }
+
+        .polygon {
+          width: 100%;
+          max-width: 4.5rem;
+        }
+
+        a {
+          font-size: 0.8rem !important;
+          font-weight: 500;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .skill_container {
+    padding-left: 0;
+
+    .top_skill_section {
+      margin-bottom: 2.5rem;
+    }
+
+    .left {
+      width: 60% !important;
+
+      h1 {
+        width: 3.5rem;
+        height: 1.688rem;
+        font-size: 1.4rem;
+        line-height: 1.7rem;
+        word-wrap: break-word;
+      }
+
+      p {
+        width: 28.125rem;
+        font-size: 1rem !important;
+        line-height: 1.35rem;
+        word-wrap: break-word;
+      }
+    }
+
+    .stack_ratings {
+      .rating-box {
+        width: auto;
+        max-width: 4.5rem !important;
+
+        .img {
+          position: relative;
+        }
+
+        img {
+          width: 90% !important;
+        }
+
+        .react {
+          width: 2.5rem !important;
+          max-width: 2.5rem !important;
+          margin-bottom: 0.9rem;
+          margin-right: -3.1rem !important;
+          margin-left: 0.7rem !important;
+        }
+
+        .firebase {
+          width: 2rem !important;
+          max-width: 2.3rem !important;
+          margin-bottom: 0.7rem !important;
+          margin-right: -2.85rem !important;
+          margin-left: 0.7rem !important;
+        }
+
+        .polygon {
+          width: 80% !important;
+        }
+
+        a {
+          font-weight: 700 !important;
+        }
+      }
+    }
+    .right {
+      .pentagon_img {
+        width: 23rem !important;
+        height: 25.8vw !important;
+        max-width: 31.9375rem !important;
+        max-height: 25.875rem !important;
+        transition: transform 0.5s ease-in-out;
+      }
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .skill_container {
+    padding: 2em 0;
+  }
+  .top_skill_section {
+    flex-direction: column-reverse;
+    justify-content: center !important;
+    align-items: center !important;
+
+    .left {
+      width: 30rem !important;
+      max-width: 50rem;
+     margin-bottom: -3rem;
+      h1 {
+        width: 100%;
+      }
+
+      .stack_ratings {
+        margin-bottom: 1rem;
+      }
+    }
+
+    .right {
+      .pentagon_img {
+        width: 80%;
+        height: auto;
+        max-width: none;
+        max-height: none;
+        margin-bottom: 1.5rem;
+      }
+    }
+    .right {
+      .pentagon_img {
+        width: 30rem !important;
+        height: 30.8vw !important;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .top_skill_section {
+    align-items: center;
+
+    .left {
+      width: 100%;
+      text-align: center !important;
+      padding: 0 !important;
+
+      h1 {
+        width: 100% !important;
+      }
+
+      p {
+        width: 100%;
+        word-wrap: break-word;
+        padding: 0 !important;
+      }
+    }
+
+    .right {
+      text-align: center;
+
+      .pentagon_img {
+        height: auto;
+        max-width: none;
+        height: 30.8vw !important;
+        margin-bottom: 1.5rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .top_skill_section {
+    align-items: center;
+
+    .left {
+      width: calc(100% - 2rem) !important;
+      text-align: center !important;
+
+      h1 {
+        width: 100% !important;
+      }
+
+      .stack_ratings {
+        .rating-box {
+          width: auto;
+
+          .react {
+            width: 2rem !important;
+            max-width: 2rem !important;
+            margin-bottom: 0.8rem;
+            margin-right: -2.8rem !important;
+            margin-left: 0.7rem !important;
+          }
+
+          .firebase {
+            width: 2rem !important;
+            max-width: 2.3rem !important;
+            margin-bottom: 0.7rem !important;
+            margin-right: -2.79rem !important;
+            margin-left: 0.7rem !important;
+          }
+        }
+      }
+    }
+
+    .right {
+      width: calc(100% - 2rem) !important;
+      align-items: center !important;
+      .pentagon_img {
+        width: 100% !important;
+        height: auto;
+        max-width: none;
+        height: 40.8vw !important;
+        margin-bottom: 1.5rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .top_skill_section {
+    .left {
+      width: calc(100% - 2rem) !important;
+
+      .stack_ratings {
+        width: 100% !important;
+        .rating-box {
+          width: 4rem;
+
+          .img {
+            width: 1rem !important;
+            height: 2rem !important;
+          }
+
+          img {
+            width: 100%;
+            height: 4rem !important;
+          }
+
+          .react {
+            width: 2rem !important;
+            height: 2.3rem !important;
+            margin-right: -2.6rem !important;
+            margin-left: 0.6rem !important;
+          }
+
+          .firebase {
+            width: 2rem !important;
+            height: 2.3rem !important;
+            margin-right: -2.56rem !important;
+            margin-left: 0.5rem !important;
+          }
+
+          a {
+            font-size: 0.7rem !important;
+          }
         }
       }
     }
