--- a/src/page/home/home.css
+++ b/src/page/home/home.css
@@ -1,5 +1,7 @@
 .home {
   background: #f9f9f9;
-  border: 1px solid red;
-  position: relative;
+  border: 1px solid rgb(0, 4, 255);
+  /* position: relative; */
+  margin: 2em auto;
+  width: 100%;
 }
